derive/tests/ui/attr-invalid-meta-words.stderr
error: Invalid attribute parameter(s): 'Xmeta'. Expected 'meta, raw_params'
 --> $DIR/attr-invalid-meta-words.rs:7:2
  |
7 |       /// Returns a protocol version
  |  _____^
8 | |     #[rpc(name = "protocolVersion", Xmeta)]
9 | |     fn protocol_version(&self) -> Result<String>;
  | |_________________________________________________^
